--- a/.github/workflows/main_food-order-app.yml
+++ b/.github/workflows/main_food-order-app.yml
@@ -25,7 +25,9 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
-        run: mvn clean install
+             
+        run:  cd Food-Order-System
+              mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -61,3 +63,4 @@ jobs:
           slot-name: 'Production'
           package: '*.war'
           
+
