Fix workflow directory and enhance documentation
Updated the workflow to use the correct directory for Maven build and added necessary documentation.

--- a/.github/workflows/main_food-order-app.yml
+++ b/.github/workflows/main_food-order-app.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build with Maven
              
-        run:  cd Food-Order-System
+        run:  cd food-order-web
               mvn clean install
 
       - name: Upload artifact for deployment job
@@ -63,4 +63,5 @@ jobs:
           slot-name: 'Production'
           package: '*.war'
           
+
 
