--- a/.github/workflows/main_food-order-app.yml
+++ b/.github/workflows/main_food-order-app.yml
@@ -25,9 +25,10 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
-             
-        run:  cd food-order-web
-              mvn clean install
+        run: |
+          cd food-order-web
+          mvn clean install
+
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -63,5 +64,6 @@ jobs:
           slot-name: 'Production'
           package: '*.war'
           
+
 
 
