--- a/.github/workflows/main_food-order-app.yml
+++ b/.github/workflows/main_food-order-app.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: food-order-web/target/*.war
 
   deploy:
     runs-on: ubuntu-latest
@@ -64,6 +64,7 @@ jobs:
           slot-name: 'Production'
           package: '*.war'
           
+
 
 
 
